--- a/recipes/templates/recipes/login.html
+++ b/recipes/templates/recipes/login.html
@@ -1,3 +1,5 @@
+<!-- templates/recipes/login.html -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,5 +13,6 @@
         <button type="submit">Login</button>
     </form>
     <a href="{% url 'signup' %}">Don't have an account? Sign up</a>
+    <p>After logging in, you can view your profile at <a href="/accounts/profile/">/accounts/profile/</a>.</p>
 </body>
 </html>
