--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -5,6 +5,14 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    {% if user.is_authenticated %}
+        <p>Hello, {{ user.username }}!</p>
+        <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'add_recipe' %}">Add Recipe</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'signup' %}">Sign Up</a>
+    {% endif %}
     <ul>
         {% for recipe in recipes %}
             <li><a href="{% url 'recipe_detail' recipe.pk %}">{{ recipe.name }}</a></li>
