--- a/recipes/templates/recipes/logout.html
+++ b/recipes/templates/recipes/logout.html
@@ -1,3 +1,5 @@
+<!-- templates/recipes/logout.html -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,6 +7,10 @@
 </head>
 <body>
     <h2>You have been logged out.</h2>
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit">Confirm Logout</button>
+    </form>
     <a href="{% url 'login' %}">Login again</a>
 </body>
 </html>
