--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -46,6 +46,10 @@
         .recipe-card .btn-primary:hover {
             background-color: #77CF5E;
         }
+        .dropdown-menu {
+        left: auto;
+        right: 0;
+        }
     </style>
 </head>
 <body>
@@ -61,26 +65,29 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            <a class="nav-link" href="{% url 'add_recipe' %}">Добавить рецепт</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'add_recipe' %}">Add Recipe</a>
+                            <a class="nav-link" href="{% url 'cart_detail' %}">Корзина</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'cart_detail' %}">Cart</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Профиль
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="{% url 'profile' %}">Профиль</a></li>
+                                <li><a class="dropdown-item" href="{% url 'favorite_list' %}">Избранное</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="{% url 'logout' %}">Выйти</a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'favorite_list' %}">My Favorites</a>
-                        </li>
+
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'login' %}">Войти</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                            <a class="nav-link" href="{% url 'signup' %}">Зарегистрироваться</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -101,18 +108,18 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ recipe.name }}</h5>
                             <p class="card-text">{{ recipe.description }}</p>
-                            <a href="{% url 'recipe_detail' recipe.pk %}" class="btn btn-primary">View Recipe</a>
+                            <a href="{% url 'recipe_detail' recipe.pk %}" class="btn btn-primary">Подробнее</a>
                         </div>
                     </div>
                 </div>
             {% empty %}
                 <div class="col">
-                    <p>No recipes available.</p>
+                    <p>Нет доступных рецептов.</p>
                 </div>
             {% endfor %}
         </div>
     </div>
-    <!-- Подключение Bootstrap JS (опционально) -->
+    <!-- Подключение Bootstrap JS (обязательно для работы Dropdown) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
